[tool.poetry]
name = "aula-aovivo-mehdi"
version = "0.1.0"
description = ""
authors = ["Anderson Almeida <anderson.s.almeida@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
